# cmake-static-lib

./: .gitignore
dyn_lib/: CMakeLists.txt
dyn_lib/src/: mymath2.cpp  mymath2.h
exe/: CMakeLists.txt
exe/src/: main.cpp
static_lib/: .gitignore  CMakeLists.txt
static_lib/src/: mymath.cpp
